# cxxmcp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  BREAKING_CHANGES.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPPLINT.cfg  DEPENDENCY_POLICY.md  LICENSE  README.md  README_zh.md  ROADMAP.md  SECURITY.md  VERSIONING.md  conanfile.py  renovate.json  todo.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
bench/: CMakeLists.txt  README.md  echo_server.cpp  mcp-bench.mjs
cmake/: cxxmcpConfig.cmake.in
docs/: Doxyfile  V2_PLAN.md  adoption_ledger.md  auth_design.md  auth_user_guide.md  capability_lifecycles.md  capability_matrix.md  compatibility_policy.md  conformance_evidence.md  de_facto_standard_roadmap.md  dependency_policy.md  ecosystem_maturity_evidence.md  elicitation_lifecycle.md  examples.md  graceful_shutdown.md  high_level_api.md  http_transport_backend_evidence.md  httplib_async_transport_strategy.md  official_sdk_candidate_process.md  package_consumption.md  package_consumption_zh.md  performance_debt.md  project_assessment.md  protocol_model_audit.md  public_api_stability.md  readme-polish-proposal.md  recommended_project_layout.md  release_candidate_checklist.md  release_gates.md  release_notes_template.md  release_policy.md  release_process.md  request_lifecycle.md  rmcp_api_inventory.md  (+11 more)
examples/: CMakeLists.txt  auth_bearer_http.cpp  auth_dpop_openssl.cpp  client_loopback.cpp  client_peer.cpp  elicitation_client.cpp  gateway_runtime.cpp  handler_contracts.cpp  oauth_authorization_server.cpp  process_stdio_client.cpp  server_peer.cpp  server_stdio_peer.cpp  stdio_server.cpp  streamable_http_client.cpp  task_async_client_server.cpp  timeout_cancellation.cpp  typed_stdio_server.cpp  websocket_client.cpp  websocket_server.cpp
examples/auth/: oauth_client_flow.cpp
examples/basics/: cxx17_consumer.cpp  handler_contracts.cpp
examples/http/: auth_bearer_http.cpp
examples/peer/: elicitation_client.cpp
examples/stdio/: process_stdio_client.cpp  typed_stdio_server.cpp
templates/external_consumer/: CMakeLists.txt  README.md  main.cpp
tests/: CMakeLists.txt  compile_fail_unreflected_typed_tool.cmake  package_smoke.cmake  release_gate_manifest.cmake  run_cargo_fixture.cmake  sdk_boundary.cmake
tests/app/: test_app.cpp  test_client_discovery.cpp  test_gateway.cpp  test_server_management.cpp  test_task_management.cpp  test_tool_management.cpp
tests/auth/: test_auth.cpp  test_auth_openssl.cpp
tests/cli/: test_cli.cpp
tests/client_server/: test_client_server.cpp
tests/fixtures/: process_stdio_child.cpp  process_stdio_child.mjs  process_stdio_child.py  process_stdio_child_node.mjs  process_stdio_client.mjs  process_stdio_client.py  process_stdio_client_node.mjs
tests/fixtures/compile_fail/: unreflected_typed_tool.cpp
tests/fixtures/package_smoke/: CMakeLists.txt  adapters.cpp  auth.cpp  auth_openssl.cpp  canonical.cpp  client.cpp  handler.cpp  http.cpp  main.cpp  peer.cpp  plugin_sdk.cpp  protocol.cpp  request.cpp  sdk.cpp  server.cpp  service.cpp  transport.cpp  websocket.cpp
tests/fixtures/protocol/: cancelled.notification.params.json  completion.complete.params.json  elicitation.create.form.params.json  initialize.request.json  invalid.dual_result_error.json  invalid.missing_method.json  invalid.null_request_id.json  invalid.response_missing_payload.json  invalid.version.json  logging.set_level.params.json  ping.request.json  progress.notification.params.json  prompts.list.result.json  resources.list.result.json  response.error.json  response.success.json  roots.list.result.json  sampling.create_message.params.json  tasks.list.result.json  tools.list.result.json
tests/fixtures/rmcp_completion_client/: Cargo.toml
tests/fixtures/rmcp_completion_client/src/: main.rs
tests/fixtures/rmcp_pagination_client/: Cargo.toml
tests/fixtures/rmcp_pagination_client/src/: main.rs
tests/fixtures/rmcp_process_stdio_client/: Cargo.toml
tests/fixtures/rmcp_process_stdio_client/src/: main.rs
tests/fixtures/rmcp_reverse_server/: Cargo.toml
tests/fixtures/rmcp_reverse_server/src/: main.rs
tests/fixtures/rmcp_roots_sampling_client/: Cargo.toml
tests/fixtures/rmcp_roots_sampling_client/src/: main.rs
tests/fixtures/rmcp_task_lifecycle_client/: Cargo.toml
tests/fixtures/rmcp_task_lifecycle_client/src/: main.rs
tests/fixtures/rust_process_stdio_child/: Cargo.toml
tests/fixtures/rust_process_stdio_child/src/: main.rs
tests/gui/: test_gui_controller.cpp
tests/interop/: test_rmcp_conformance.cpp
tests/protocol/: serialization_benchmark.cpp  test_protocol.cpp
tests/sdk/: test_public_targets.cpp  test_sdk.cpp
tests/sdk/public_headers/: auth_client_orchestrator_header.cpp  auth_constant_time_header.cpp  auth_dpop_header.cpp  auth_header.cpp  auth_http_jwks_endpoint_header.cpp  auth_http_metadata_endpoint_header.cpp  auth_http_token_endpoint_header.cpp  auth_jwks_header.cpp  auth_lifecycle_header.cpp  auth_loopback_receiver_header.cpp  auth_metadata_header.cpp  auth_openssl_base64url_header.cpp  auth_openssl_dpop_header.cpp  auth_openssl_jwk_header.cpp  auth_openssl_jws_header.cpp  auth_openssl_jws_verify_header.cpp  auth_openssl_jwt_header.cpp  auth_openssl_pkce_header.cpp  auth_openssl_server_auth_provider_header.cpp  auth_openssl_sha256_header.cpp  auth_pkce_header.cpp  auth_registration_header.cpp  auth_server_auth_endpoints_header.cpp  auth_server_auth_provider_header.cpp  auth_token_header.cpp  auth_types_header.cpp  auth_www_auth_header.cpp  client_header.cpp  config_header.cpp  error_header.cpp  handler_header.cpp  peer_header.cpp  protocol_header.cpp  protocol_types_header.cpp  protocol_types_reflect_header.cpp  sdk_header.cpp  server_header.cpp  service_header.cpp  transport_header.cpp  websocket_transport_header.cpp
tests/transport/: test_http_transport.cpp  test_process_stdio_transport.cpp  test_stdio_transport.cpp  test_transport_adapters.cpp  test_transport_contract.cpp  test_transport_stdio_contract.cpp  test_websocket_transport.cpp
(+309 files in other folders)
